--- a/exercicios/desafios/d012/estilo/style.css
+++ b/exercicios/desafios/d012/estilo/style.css
@@ -59,6 +59,10 @@ section {
     font-size: 2.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
    background-color: white;
    color: black; 
@@ -72,7 +76,16 @@ section.imagem {
 section.imagem > p {
     display:inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.538);
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
 }
 
 footer {
