--- a/exercicios/desafios/d012/estilo/style.css
+++ b/exercicios/desafios/d012/estilo/style.css
@@ -71,21 +71,27 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.568);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display:inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.538);
+    text-shadow: 1px 1px 0px black;
 }
 
 section#img01 {
     background-image: url(../imagens/background001.jpg);
     background-position: right center;
+    
 }
 
 section#img02 {
     background-image: url(../imagens/background002.jpg);
+   
 }
 
 footer {
